@@ -7,7 +7,7 @@
 approx_distances(x, y = NULL, projection = NULL, target = NULL)
 }
 \arguments{
-\item{x}{object that can be coerced to a bounding box with \code{\link{bb}}, or a pair of coordintes (vector of two). In the former case, the distance across the horizontal and vertical centerlines of the bounding box are approximated. In the latter case, \code{y} is also required; the distance between points \code{x} amd \code{y} is approximated.}
+\item{x}{object that can be coerced to a bounding box with \code{\link{bb}}, or a pair of coordintes (vector of two). In the former case, the distance across the horizontal and vertical centerlines of the bounding box are approximated. In the latter case, \code{y} is also required; the distance between points \code{x} and \code{y} is approximated.}
 
 \item{y}{a pair of coordintes, vector of two. Only required when \code{x} is also a pair of coordintes.}
 
