@@ -1,6 +1,7 @@
 version 3.0-1
 - bb takes asp.limit argument which controls the maximum aspect ratio
 - improved geocode_OSM when no results are found
+- simplify_shape now works on sfc objects and sf objects with only a geometry column
 
 version 3.0
 - stars support
